youurl/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME-mariadb}
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      app: ${SERVICE_NAME-mariadb}
  replicas: ${SERVICE_NAME_REPLICA_COUNT}
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME-mariadb}
    spec:
      containers:
      - name: ${SERVICE_NAME-mariadb}
        image: ${IMAGE_NAME}:${IMAGE_VERSION}
        ports:
        - containerPort: ${DATABASE_PORT}
        volumeMounts:
        - name: "${SERVICE_NAME-mariadb}-storage"
          mountPath: /var/lib/mysql
      volumes:
      - name: "${SERVICE_NAME-mariadb}-storage"
        persistentVolumeClaim:
          claimName: "${SERVICE_NAME-mariadb}-storage"
---
apiVersion: v1
kind: Service
metadata:
  name: "${SERVICE_NAME-mariadb}-svc"
  namespace: ${NAMESPACE}
spec:
  selector:
    app: mariadb
  ports:
    - name: "${SERVICE_NAME-mariadb}-port"
      port: ${DATABASE_PORT}
      targetPort: ${DATABASE_PORT}
  type: ClusterIP
