youurl/youurl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${YOUURL_SERVICE_NAME}
  namespace: ${YOUURL_NAMESPACE}
  labels:
    app: ${YOUURL_SERVICE_NAME}
spec:
  replicas: ${YOUURL_REPLICA_COUNT}
  selector:
    matchLabels:
      app: ${YOUURL_SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${YOUURL_SERVICE_NAME}
    spec:
      containers:
      - name: ${YOUURL_SERVICE_NAME}
        image: ${YOUURL_IMAGE}:${YOUURL_IMAGE_VERSION}
        ports:
        - containerPort: ${YOUURL_PORT}
        volumeMounts:
        - name: "${YOUURL_SERVICE_NAME}-data"
          mountPath: /var/www/html
      volumes:
      - name: "${YOUURL_SERVICE_NAME}-data"
        persistentVolumeClaim:
          claimName: "${YOUURL_SERVICE_NAME}-pvc"
---
apiVersion: v1
kind: Service
metadata:
  name: "${YOUURL_SERVICE_NAME}-svc"
  namespace: ${YOUURL_NAMESPACE}
  labels:
    app: ${YOUURL_SERVICE_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${YOUURL_SERVICE_NAME}
  ports:
  - name: http
    port: ${YOUURL_PORT}
    targetPort: ${YOUURL_PORT}
