youurl/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "${YOUURL_SERVICE_NAME}-ingress"
  namespace: ${YOUURL_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
  - host: bitslikes.de
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: "${YOUURL_SERVICE_NAME}-svc"
            port:
              number: ${YOUURL_PORT}
  tls:
    - secretName: bitslikes.de
      hosts:
        - bitslikes.de
